<resources>
    <string name="app_name">MIREA Assistant</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="schedule">Schedule</string>

    <string name="refreshed">Schedule refreshed</string>

    <string name="choose_institute">Choose institute</string>
    <string name="choose_group">Choose group</string>
    <string name="choose_week">Week type (Identify - long press)</string>

    <string name="about_title">About</string>
    <string name="about_body">Show info about app</string>
    <string name="about_close">Close</string>

    <string name="error_title">Error</string>
    <string name="error_body">No connection to the server</string>
    <string name="error_try_again">Try again</string>
    <string name="about_version">MIREA Assistant 1.0</string>
    <string name="about_content_one">MIREA Assistant сделан для предоставления студентам различной информации об Университете в удобном виде.</string>
    <string name="about_content_two">Если расписание вашей группы/института отсутствует или оно не совпадает с действительностью, обратитесь к авторам проекта.</string>
    <string name="about_content_site">Сайт:</string>
    <string name="about_content_site_link">http://mirea.feed4rz.ru/</string>
    <string name="about_content_authors">Авторы:</string>
    <string name="about_content_vinter">Ruslan Vinter (mobile)</string>
    <string name="about_content_vinter_link">https://vk.com/r_vinter</string>
    <string name="about_content_feed4rz">feed4rz (WEB)</string>
    <string name="about_content_feed4rz_link">https://vk.com/id312615911</string>

    <string name="about_content">
        MIREA Assistant 1.0 BETA (сборка 9 (STABLE)) \n
        \n
        MIREA Assistant сделан для предоставления студентам различной информации об Университете в удобном виде. \n
        \n
        MIREA Assistant является open source проектом, рекомендуем посетить репозиторий проекта, если у вас есть идеи по его улучшению. \n
        \n
        Если расписание вашей группы/института отсутствует или оно не совпадает с действительностью, обратитесь к авторам проекта. \n
        \n
        Сайт: \n
        http://mirea.feed4rz.ru/ \n
        \n
        Авторы: \n
        Ruslan Vinter - mobile development \n
        feed4rz - WEB development \n
    </string>

    //instituteList
    <string name="IT">Институт информационных технологий</string>

    <string-array name="schedule_days">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>

    <string-array name="schedule_weeks">
        <item>Even</item>
        <item>Odd</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
