<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="radonsoft.mireaassistant.fragments.Settings"
    >
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/frameLayout2"
                android:background="@drawable/ripple_settings"
                android:clickable="true"
                android:layout_alignParentLeft="false"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="false"
                android:layout_alignWithParentIfMissing="false"
                android:layout_above="@+id/textView14" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/choose_institute"
                android:id="@+id/textView12"
                android:paddingTop="5dp"
                android:textColor="#484848"
                android:textSize="18dp"
                android:paddingLeft="17dp"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/imageView2"
                android:layout_toEndOf="@+id/imageView2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Institute"
                android:id="@+id/textView13"
                android:layout_below="@+id/textView12"
                android:layout_alignLeft="@+id/textView12"
                android:layout_alignStart="@+id/textView12"
                android:maxLines="2"
                android:paddingLeft="17dp"
                android:paddingBottom="8dp"
                android:textSize="14dp"
                android:textIsSelectable="false" />

            <TextView
                android:layout_width="50dp"
                android:layout_height="1dp"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:id="@+id/textView14"
                android:background="#B2B2B2"
                android:layout_below="@+id/textView13"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_alignLeft="@+id/textView13"
                android:layout_alignStart="@+id/textView13" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="RAD"
                android:id="@+id/imageView2"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:textSize="18dp"
                android:paddingLeft="12dp"
                android:background="@drawable/ic_menu_manage"
                android:layout_marginLeft="10dp"
                android:backgroundTint="@color/colorPrimaryDark" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/frameLayout"
                android:background="@drawable/ripple_settings"
                android:clickable="true"
                android:layout_alignParentLeft="false"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="false"
                android:layout_alignWithParentIfMissing="false"
                android:layout_above="@+id/textView10" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/choose_group"
                android:id="@+id/textView8"
                android:paddingTop="5dp"
                android:textColor="#484848"
                android:textSize="18dp"
                android:paddingLeft="17dp"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/textView11"
                android:layout_toEndOf="@+id/textView11" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Group"
                android:id="@+id/textView9"
                android:layout_below="@+id/textView8"
                android:layout_alignLeft="@+id/textView8"
                android:layout_alignStart="@+id/textView8"
                android:maxLines="2"
                android:paddingLeft="17dp"
                android:paddingBottom="8dp"
                android:textSize="14dp"
                android:textIsSelectable="false" />

            <TextView
                android:layout_width="50dp"
                android:layout_height="1dp"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:id="@+id/textView10"
                android:background="#B2B2B2"
                android:layout_below="@+id/textView9"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_alignLeft="@+id/textView9"
                android:layout_alignStart="@+id/textView9" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="RAD"
                android:id="@+id/textView11"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:textSize="18dp"
                android:paddingLeft="12dp"
                android:background="@drawable/ic_account_circle_black_24dp"
                android:tint="@color/colorPrimary"
                android:layout_marginLeft="10dp"
                android:tintMode="multiply"
                android:backgroundTint="@color/colorPrimaryDark" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/frameLayout3"
                android:background="@drawable/ripple_settings"
                android:clickable="true"
                android:layout_alignParentLeft="false"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="false"
                android:layout_alignWithParentIfMissing="false"
                android:layout_above="@+id/textView17" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/choose_week"
                android:id="@+id/textView15"
                android:paddingTop="5dp"
                android:textColor="#484848"
                android:textSize="18dp"
                android:paddingLeft="17dp"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/imageView3"
                android:layout_toEndOf="@+id/imageView3" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Week type"
                android:id="@+id/textView16"
                android:layout_below="@+id/textView15"
                android:layout_alignLeft="@+id/textView15"
                android:layout_alignStart="@+id/textView15"
                android:maxLines="2"
                android:paddingLeft="17dp"
                android:paddingBottom="8dp"
                android:textSize="14dp"
                android:textIsSelectable="false" />

            <TextView
                android:layout_width="50dp"
                android:layout_height="1dp"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:id="@+id/textView17"
                android:background="#B2B2B2"
                android:layout_below="@+id/textView16"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_alignLeft="@+id/textView16"
                android:layout_alignStart="@+id/textView16" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/imageView3"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:textSize="18dp"
                android:paddingLeft="12dp"
                android:background="@drawable/ic_date_range_black_24dp"
                android:layout_marginLeft="10dp"
                android:backgroundTint="@color/colorPrimaryDark" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/frameLayout4"
                android:background="@drawable/ripple_settings"
                android:clickable="true"
                android:layout_alignParentLeft="false"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="false"
                android:layout_alignWithParentIfMissing="false"
                android:layout_above="@+id/textView22" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/about_title"
                android:id="@+id/textView20"
                android:paddingTop="5dp"
                android:textColor="#484848"
                android:textSize="18dp"
                android:paddingLeft="17dp"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/imageView4"
                android:layout_toEndOf="@+id/imageView4" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/about_body"
                android:id="@+id/textView21"
                android:layout_below="@+id/textView20"
                android:layout_alignLeft="@+id/textView20"
                android:layout_alignStart="@+id/textView20"
                android:maxLines="2"
                android:paddingLeft="17dp"
                android:paddingBottom="8dp"
                android:textSize="14dp"
                android:textIsSelectable="false" />

            <TextView
                android:layout_width="50dp"
                android:layout_height="1dp"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:id="@+id/textView22"
                android:background="#B2B2B2"
                android:layout_below="@+id/textView21"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_alignLeft="@+id/textView21"
                android:layout_alignStart="@+id/textView21" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/imageView4"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:textSize="18dp"
                android:paddingLeft="12dp"
                android:background="@drawable/ic_info_black_24dp"
                android:layout_marginLeft="10dp"
                android:backgroundTint="@color/colorPrimaryDark" />
        </RelativeLayout>

    </LinearLayout>
</ScrollView>
